Detalhes para o deploy

--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -58,7 +58,7 @@
 
   <div class="card-deck mt-4">
     <div class="card bg">
-      <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.png" alt="Imagem de capa do card">
+      <img class="card-img-top rounded-circle" src="https://i.imgur.com/ulsDWuI.jpg" alt="Imagem de capa do card">
       <div class="card-body text-center">
         <h5 class="card-title">PAULO HENRIQUE</h5>
         <button class="g mr-3"><a href="https://github.com/PHChil"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
