--- a/src/app/edit/usuario-edit/usuario-edit.component.html
+++ b/src/app/edit/usuario-edit/usuario-edit.component.html
@@ -1,4 +1,14 @@
 <section class="vh-100" style="background-color: rgb(255, 255, 255);">
+
+  <!-- IMPLEMENTAÇÃO FUTURAAAA -->
+
+  <!-- <div class="row marcador align-items-center">
+    <div class="col mx-auto text-center">
+      <img class="img-responsive" src="" width="80" height="80">
+    </div>
+  </div> -->
+
+
   <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-lg-12 col-xl-11">
@@ -11,35 +21,51 @@
 
                 <form class="mx-1 mx-md-4">
 
+                  <!-- NOME -->
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fa fa-user" aria-hidden="true"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="form3Example1c">Seu nome</label>
-                      <input type="text" id="form3Example1c" class="form-control" />
+                      <input [(ngModel)]="usuario.nome" class="form-control" type="text" name="nome" id="nome" placeholder="José Maria">
                     </div>
                   </div>
 
+                  <!-- USUÁRIO -->
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fa fa-envelope" aria-hidden="true"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="form3Example3c">Seu email</label>
-                      <input type="email" id="form3Example3c" class="form-control" />
+                      <input [(ngModel)]="usuario.usuario" type="email" id="usuario" class="form-control mb-4"
+                          placeholder="Email" name='usuario'>
                     </div>
                   </div>
 
+                  <!-- FOTO -->
+                  <div class="d-flex flex-row align-items-center mb-4">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                    <div class="form-outline flex-fill mb-0">
+                      <label class="form-label" for="form3Example3c">Link da foto (atualizar)</label>
+                      <input [(ngModel)]="usuario.foto" type="text" id="foto" class="form-control" />
+                    </div>
+                  </div>
+
+                  <!-- SENHA -->
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fa fa-lock" aria-hidden="true"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="form3Example4c">Senha</label>
-                      <input type="password" id="form3Example4c" class="form-control" />
+                      <input [(ngModel)]="usuario.senha" type="text" (input)="confirmSenha($event)" id="senha" class="form-control" />
                     </div>
                   </div>
 
+                  <!-- REPETIR A SENHA -->
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fa fa-key" aria-hidden="true"></i>
                     <div class="form-outline flex-fill mb-0">
                       <label class="form-label" for="form3Example4cd">Repita a senha</label>
-                      <input type="password" id="form3Example4cd" class="form-control" />
+                      <input
+                      [(ngModel)]="usuario.senha" type="password" class="form-control" name="confirmSenha" id="confirmSenha" placeholder="Confirme sua senha"
+                    />
                     </div>
                   </div>
 
@@ -51,7 +77,7 @@
                   </div>
 
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button type="button" class="btn btn-primary btn-lg">Atualizar!</button>
+                    <button (click)="atualizar()" type="button" class="btn btn-primary btn-lg">Atualizar!</button>
                   </div>
 
                 </form>
@@ -59,7 +85,7 @@
               </div>
               <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
-                <img src="https://i.imgur.com/KmzhCsj.png"
+                <img src="https://i.imgur.com/mcl9hKa.png"
                   class="img-fluid" alt="Sample image">
 
               </div>
