--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -8,10 +8,10 @@ a{
 .nav-verde{
   font-size:18px ;
   margin-right: 15px;
-  color: var(--verdePadrao);
+  color: var(--verdeClaro);
 }
 .nav-verde:hover{
-  color: var(--roxoPadrao);
+  color: var(--laranjaPadrao);
   text-decoration: none;
 }
 .nav-conta{
@@ -20,17 +20,17 @@ a{
   color: var(--marromPadrao);
 }
 .nav-conta:hover{
-  color: var(--roxoPadrao);
+  color: var(--roxoPadrao)  ;
   text-decoration: none;
 }
 .fa{
-  color: var(--marromPadrao)
+  color: var(--verdeClaro)
 }
 .fa:hover{
-  color: var(--roxoPadrao);
+  color: var(--laranjaPadrao);
 }
 .bg{
-  background-color:  var(--verdeClaro);
+  background-color:#57462a;
 }
 .centro{
     justify-content: center;
@@ -62,8 +62,8 @@ a{
 }
 
 .button-create{
-  background-color: var(--verdeClaro);
-  color: var(--marromPadrao);
+  background-color: #57462a;
+  color: var(--verdeClaro);
   border: 0;
   text-decoration: none;
   border-radius: 6px;
@@ -72,7 +72,7 @@ a{
 }
 
 .button-enter{
-  background-color: var(--marromPadrao);
+  background-color:#009e00;
   color: var(--verdeClaro);
   border: 0;
   text-decoration: none;
@@ -82,7 +82,7 @@ a{
 }
 
 .button-enter:hover{
-  background-color: #57462a;
+  background-color: #016c01;
 }
 
 .fa{
