--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,7 +9,7 @@
 <!-- LOGO VEGGIEATS -->
     <ul class="navbar-nav d-flex align-items-center justify-content-center">
       <li class="nav-item active">
-        <img src="https://i.imgur.com/fxDLdT1.png"  alt="Logo Veggieats"  width="200">
+        <img src="https://i.imgur.com/rAG2hgG.png"  alt="Logo Veggieats"  width="200">
           </li>
     </ul>
 
@@ -51,7 +51,7 @@
         <a class="nav-conta dropdown-toggle fs-16" href="#" id="navbarDropdown" role="button"
           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <!-- VERIFICAÇÃO PARA VER SE TEM FOTO OU NÃO -->
-          <img src="{{usuario.foto}}" onerror="this.src = 'https://i.imgur.com/tnlziD8.png' " alt="Imagem do usuário"
+          <img src="{{foto}}" onerror="this.src = 'https://i.imgur.com/bTrrDt7.png' " alt="Imagem do usuário"
           class="rounded-circle img-fluid" width="50">
               </a>
               <i class="fa fa-shopping-cart " aria-hidden="true" routerLink="/carrinho"></i>
