--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -52,15 +52,9 @@
 
         <!-- ! SEGUNDO FOOTER -->
   <div class="container-fluid footer d-flex justify-content-center text-center">
-      <div class="row">
-          <div class="col-md-6">
-              <div class="texto"><a href="#">Veggieats</a> &copy; 2022 Todos os direitos reservados</div>
-          </div>
-          <div class="col-md-3 texto">
-                  <a href="#">Termos e Serviços</a>
-          </div>
-          <div class="col-md-3 texto text-center">
+      <div class="row texto">
+        <a class="mr-5" href="#">Termos e Serviços</a>
+        <div class="texto mr-5"><a href="#">Veggieats</a> &copy; 2022 Todos os direitos reservados</div>
                   <a href="#">Politica de privacidade</a>
-          </div>
       </div>
   </div>
