--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,9 +1,9 @@
 
   <div class="container mt-1">
     <div class="col-md-12 main-content">
-  
+
       <!-- CARROSEL -->
-  
+
       <div id="carouselExampleIndicators" class="carousel slide card-carrosel" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -19,7 +19,7 @@
             <img class="d-block w-100" src="https://i.imgur.com/QXyRaaX.jpg" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="https://i.imgur.com/M2lqTq2.jpg" alt="Third slide">
+            <img class="d-block w-100" src="https://i.imgur.com/bNsAqGX.jpg" alt="Third slide">
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="https://i.imgur.com/dklSAli.jpg" alt="Fourth slide">
@@ -36,7 +36,7 @@
       </div>
       </div>
       </div>
-  
+
       <!-- todo: link para vender e entregar -->
         <div class="container  mt-4 mb-4">
           <div class="row d-flex justify-content-center">
@@ -48,10 +48,10 @@
             </div>
             </div>
           </div>
-  
+
           <!-- PRODUTOS -->
           <!-- jumbotron-->
-  
+
           <div class="jumbotron jumbotron-fluid">
             <div class="container text-center">
               <div class="row d-flex justify-content-center align-items-center">
@@ -65,8 +65,8 @@
             </div>
           </div>
   <!-- jumbotron fim-->
-  
-  
+
+
         <div class="container d-flex justify-content-center">
           <div class="row">
             <div class="col-md-12 mt-2 justify-content-center text-center">
@@ -93,13 +93,13 @@
                         <a [routerLink]="['/categoria-delete', item.id]" href="">Apagar</a>
                       </button>
                     </div>
-  
-  
+
+
             </div>
           </div>
         </div>
-  
-  
+
+
   <!-- Modal -->
   <div class="modal fade" id="apoiemodal" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
@@ -119,9 +119,9 @@
       </div>
     </div>
         </div>
-  
+
       <!-- !MODAL PARA VENDER-->
-  
+
   <!-- Modal -->
   <div class="modal fade" id="vender" tabindex="-1" role="dialog" aria-labelledby="Titulovender" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -140,7 +140,7 @@
       </div>
     </div>
   </div>
-  
+
   <!-- ! MODAL PARA ENTREGAR  -->
   <!-- Modal -->
   <div class="modal fade" id="entregar" tabindex="-1" role="dialog" aria-labelledby="Tituloentregar" aria-hidden="true">
