--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -67,7 +67,7 @@
     </div>
 
     <div class="card bg">
-      <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.png" alt="Imagem de capa do card">
+      <img class="card-img-top rounded-circle" src="https://i.imgur.com/1Vp2RS6.jpg" alt="Imagem de capa do card">
       <div class="card-body text-center">
         <h5 class="card-title">PEDRO HENRIQUE</h5>
         <button class="g mr-3"><a href="https://github.com/PedroHenriquedp" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
