--- a/src/app/restaurantes/restaurantes.component.html
+++ b/src/app/restaurantes/restaurantes.component.html
@@ -179,9 +179,8 @@
               <small class="text-muted">{{ item.categoria.nome }}</small>
             </p>
             <p class="card-text mt-2">R$: {{ item.preco }},00</p>
-            <a class="btn mt-3 w-100" (click)="getProdById(item.id)"
-              ><i class="fa fa-cart-plus" aria-hidden="true"></i
-            ></a>
+            <a class="btn mt-3 w-100" (click)="getProdById(item.id)">
+              <i class="fa fa-cart-plus" aria-hidden="true"></i></a>
           </div>
         </div>
       </div>
