--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
   --laranjaClaro: #f1deba;
   --marromClaro: #b49155;
   --roxoClaro: #b684da;
+  --roxoMaisClaro: #f0cef8;
 }
 .montserrat{
     font-family: 'Montserrat', sans-serif;
