--- a/src/app/edit/usuario-edit/usuario-edit.component.html
+++ b/src/app/edit/usuario-edit/usuario-edit.component.html
@@ -1,4 +1,4 @@
-<section class="vh-100" style="background-color: rgb(255, 255, 255);">
+<section class="" style="background-color: rgb(255, 255, 255);">
 
   <!-- IMPLEMENTAÇÃO FUTURAAAA -->
 
@@ -9,9 +9,9 @@
   </div> -->
 
 
-  <div class="container h-100">
+  <div class="container">
     <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-lg-12 col-xl-11">
+      <div class="col-md-12">
         <div class="card text-black" style="border-radius: 25px;">
           <div class="card-body p-md-5">
             <div class="row justify-content-center">
@@ -96,3 +96,30 @@
     </div>
   </div>
 </section>
+
+
+              <!-- *PRODUTOS DO USUARIO -->
+
+<div class="container" id="prooduto">
+  <nav>
+    <div class="nav nav-tabs d-flex justify-content-center my-3" id="nav-tab" role="tablist">
+
+      <a (click)='findByIdUser()' class="nav-item nav-link produto" id="minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="minhasPostagens" aria-selected="true">ALTERE SEUS PRODUTOS CLICANDO AQUI</a>
+
+        <div class="tab-pane fade mt-3" id="minhasPostagens" role="tabpanel" aria-labelledby="minhasPostagens-tab">
+          <div class="card-columns">
+            <div class="card text-center" *ngFor="let item of usuario.produto">
+              <div class="card-body">
+                <img src="{{ item.foto }}" class="card-img-top img-fluid" alt="Imagem do produto"/>
+                <h5 class="card-title m-0">{{item.nome}}</h5>
+                <small class="tema">Tema: {{item.descricao}}</small>
+                <div class="d-flex justify-content-around">
+                  <a [routerLink]="['produto-edit', item.id]" class="linkB">ATUALIZAR</a>
+                  <a [routerLink]="['/produto-delete', item.id]" class="">EXCLUIR</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </nav></div>
