--- a/src/app/entrar-cadastro/entrar-cadastro.component.css
+++ b/src/app/entrar-cadastro/entrar-cadastro.component.css
@@ -3,7 +3,7 @@ input, select{
   box-sizing: border-box;
   border: none;
   background-color: transparent;
-  border-bottom: 2px solid #579d18;
+  border-bottom: 2px solid var(--verdePadrao);
 }
 
 .bgFundo{
@@ -11,18 +11,22 @@ input, select{
 }
 
 span{
-  color: #579d18;
+  color: var(--verdePadrao);
 }
 
 .btn-verde{
   color: white;
-  background-color: #579d18;
+  background-color: var(--verdePadrao);
 }
 .btn-laranja{
   color:white;
-  background-color: #dc9b1e;
+  background-color: var(--laranjaPadrao);
 }
 
 .verticalLine {
   border-left: thick solid #ff0000;
+}
+.tam{
+  font-size: 12px;
+  color: var(--laranjaPadrao);
 }
