--- a/src/app/entrar-cadastro/entrar-cadastro.component.html
+++ b/src/app/entrar-cadastro/entrar-cadastro.component.html
@@ -1,15 +1,15 @@
-<div class="container fredoka">
+<div class="container">
   <div>
-    <h1 class="text-center mt-5">Minha <span>Conta</span></h1>
+    <h1 class="text-center mt-5 fredoka">Minha <span>Conta</span></h1>
   </div>
 
   <div class="container-fluid">
-    <div class="row d-flex align-items-center">
+    <div class="row d-flex align-items-baseline">
       <!-- Entrar -->
       <div class="col-md-6">
         <div class="row d-flex justify-content-center mr-1">
           <div class="col-md-8">
-            <h1 class="text-center">Entrar</h1>
+            <h1 class="text-center fredoka">Entrar</h1>
 
             <p class="text-center mt-3">Já tem cadastro? Entre aqui!</p>
             <div class="form-group">
@@ -37,7 +37,7 @@
             </div>
 
             <div class="d-flex justify-content-center mt-5 mb-5">
-              <button type="submit" class="btn btn-success" (click)="entrar()">
+              <button type="submit" class="btn btn-verde" (click)="entrar()">
                 Entrar
               </button>
             </div>
@@ -53,7 +53,7 @@
         <div class="row d-flex justify-content-center ml-1">
           <div class="col-md-10">
 
-            <h1 class="text-center">Cadastro</h1>
+            <h1 class="text-center fredoka">Cadastro</h1>
 
             <p class="text-center mt-3">
               Ainda não se cadastrou? Comece por aqui!
@@ -124,6 +124,7 @@
                     id="senha"
                     placeholder="Digite sua senha"
                   />
+                  <span class="tam">Senha com minímo 8 digitos</span>
                 </div>
                 <div class="col">
                   <label for="confirmSenha"></label>
