--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -78,7 +78,7 @@
         </div>
         <div class="row">
           <div class="col-md d-flex justify-content-center mr-0 ">
-            <button type="submit" class="btn btn-success mb-50">Enviar</button>
+            <button type="submit" class="btn btn-success mb-50" (click)="enviar()">Enviar</button>
           </div>
         </div>
 
