--- a/src/app/entrar-cadastro/entrar-cadastro.component.html
+++ b/src/app/entrar-cadastro/entrar-cadastro.component.html
@@ -156,7 +156,7 @@
               <button
                 type="submit"
                 class="btn btn-laranja mr-4"
-                routerLink="/entrar"
+                routerLink="/login"
               >
                 Cancelar
               </button>
