alteração sobre nós

--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -39,7 +39,7 @@
       <div class="card bg">
         <img class="card-img-top rounded-circle" src="https://i.imgur.com/JGur4Pg.jpg" alt="Imagem de capa do card">
         <div class="card-body text-center">
-          <h5 class="card-title">JENNY GRITTI</h5>
+          <h5 class="card-title">JENNY</h5>
           <button class="g mr-3"><a href="https://github.com/jennygritti"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
           <button class="l"><a href="https://www.linkedin.com/in/jenny-gritti/"  target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></button>
 
