Alterações antes da apresentação

--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -9,7 +9,7 @@
     <div class="row d-flex justify-content-center align-items-center">
       <div class="col-md-6">
         <p class="text-justify">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores commodi fugit ipsam obcaecati nesciunt iste, saepe et perferendis nisi deserunt facilis voluptas reprehenderit. Iusto et officia inventore minus, libero porro ducimus dolore ipsa eos minima, mollitia voluptates eligendi. Magnam, molestiae illum animi accusamus, veniam minima iure nam omnis, ipsum quaerat modi velit sit dolores pariatur ut odit odio harum repellendus nihil deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa minus quasi molestias quae, cupiditate corporis id soluta, voluptatem voluptatibus facilis eveniet at ut delectus consequuntur harum neque quos optio error dicta veritatis! Magnam voluptas voluptatibus eligendi molestias repellendus! Accusamus magnam tempora perspiciatis sint, quos ab, fugiat vel aliquid temporibus, aspernatur ipsam voluptatum nostrum asperiores dolorum!
+          O ODS 8 busca promover o crescimento econômico sustentável e inclusivo, o emprego pleno e produtivo e o trabalho digno para todos. Para tal, é necessário manter o crescimento econômico per capita de acordo com as circunstâncias nacionais e conseguir que o crescimento do PIB dos países menos adiantados seja de, pelo menos, 7 % ao ano. Também é necessário promover políticas que apoiem atividades produtivas e a criação de postos de trabalho decentes, o empreendimento e a inovação.
         </p>
       </div>
       <div class="col-md-6">
