--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid my-4 fredoka">
     <div class="container">
       <div class="row">
-        <h3 class='text-verde'>Minhas Compras</h3>
+        <h3 class='text-verde mb-2'>Minhas Compras</h3>
       </div>
       <div class="row d-flex align-items-center justify-content-between">
         <div class="col-7">
@@ -11,7 +11,7 @@
             </div>
             <div class="col-6 d-flex flex-column justify-content-center">
               <div class="row">
-                <h5 class=''> {{item.nome}}</h5>
+                <h5 class='mr-3'> {{item.nome}}</h5>
               </div>
             </div>
             <div class="col-3">
@@ -19,6 +19,9 @@
                 <h5 class="text-center"> {{item.preco | currency: "BRL"}}</h5>
               </div>
             </div>
+
+            <button class="btn btn-danger btn-block">Remover Item</button>
+
           </div>
         </div>
         <div class="col-3">
