--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,171 +1,314 @@
+    <!-- CARROSEL -->
 
-  <div class="container mt-1">
-    <div class="col-md-12 main-content">
-
-      <!-- CARROSEL -->
-
-      <div id="carouselExampleIndicators" class="carousel slide card-carrosel" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="https://i.imgur.com/YhBLALW.jpg" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="https://i.imgur.com/QXyRaaX.jpg" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="https://i.imgur.com/bNsAqGX.jpg" alt="Third slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="https://i.imgur.com/dklSAli.jpg" alt="Fourth slide">
-          </div>
+    <div class="container my-4">
+      <div class="row w-100">
+        <div class="col-md-12 p-2">
+          <div
+            id="carouselExampleIndicators"
+            class="carousel slide"
+            data-ride="carousel"
+          >
+            <ol class="carousel-indicators">
+              <li
+                data-target="#carouselExampleIndicators"
+                data-slide-to="0"
+                class="active"
+              ></li>
+              <li
+                data-target="#carouselExampleIndicators"
+                data-slide-to="1"
+              ></li>
+              <li
+                data-target="#carouselExampleIndicators"
+                data-slide-to="2"
+              ></li>
+              <li
+                data-target="#carouselExampleIndicators"
+                data-slide-to="3"
+              ></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  class="d-block w-100"
+                  src="https://i.imgur.com/ue5MrTa.jpg"
+                  alt="First slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block w-100"
+                  src="https://i.imgur.com/36SOS5f.jpg"
+                  alt="Second slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block w-100"
+                  src="https://i.imgur.com/PvxYKaB.jpg"
+                  alt="Third slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block w-100"
+                  src="https://i.imgur.com/6SxPVHQ.jpg"
+                  alt="Fourth slide"
+                />
+              </div>
+              <a
+              class="carousel-control-prev"
+              href="#carouselExampleIndicators"
+              role="button"
+              data-slide="prev"
+              >
+              <span
+              class="carousel-control-prev-icon"
+              aria-hidden="true"
+              ></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+            class="carousel-control-next"
+            href="#carouselExampleIndicators"
+            role="button"
+            data-slide="next"
+            >
+            <span
+            class="carousel-control-next-icon"
+            aria-hidden="true"
+            ></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
+    </div>
       </div>
-      </div>
+    </div>
 
       <!-- todo: link para vender e entregar -->
-        <div class="container  mt-4 mb-4">
-          <div class="row d-flex justify-content-center">
-            <div class="col-md-5">
-              <a data-toggle="modal" data-target="#vender"><img src="https://i.imgur.com/8Z2V3rl.jpg" class="img-fluid" ></a>
-            </div>
-            <div class="col-md-5">
-              <a data-toggle="modal" data-target="#entregar"><img src="https://i.imgur.com/GJpyfOf.jpg" class="img-fluid"></a>
-            </div>
-            </div>
+      <div class="container mt-5 mb-5">
+        <div class="row d-flex justify-content-center">
+          <div class="col-md-5">
+            <a data-toggle="modal" data-target="#vender"
+              ><img src="https://i.imgur.com/8Z2V3rl.jpg" class="img-fluid"
+            /></a>
           </div>
-
-          <!-- PRODUTOS -->
-          <!-- jumbotron-->
-
-          <div class="jumbotron jumbotron-fluid">
-            <div class="container text-center">
-              <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-md-9">
-                  <div class="form-group mb-4 mt-4">
-                    <h1 class="display-5 fredoka">APOIE O VEGGIEATS</h1>
-                    <p class="lead mt-3">Seja um parceiro, colaborador, ou cliente fidelidade. Vamos ajudar a causa das micros, pequenas e médias empresas que produzem produtos focando na sustentabilidade, elaborando refeições Veganas e Vegetarianas!</p>
-                    <a class="branco" routerLink="/contato">Entre em contato aqui</a>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <div class="col-md-5">
+            <a data-toggle="modal" data-target="#entregar"
+              ><img src="https://i.imgur.com/GJpyfOf.jpg" class="img-fluid"
+            /></a>
           </div>
-  <!-- jumbotron fim-->
+        </div>
+      </div>
 
+    <!-- PRODUTOS -->
+    <!-- jumbotron-->
 
-        <div class="container mt-3 d-flex justify-content-center">
-          <div class="row ">
-            <div class="col-md-12 mt-2 justify-content-center text-center">
-              <h1 class="text-center corroxo fredoka">CATEGORIAS</h1>
-              <div class="clicavel" *ngIf="auth.adm()" >
-                <a [routerLink]="['/categoria']" class="text-center justify-content-center corroxo">+ Adicionar Categoria</a>
-              </div>
-              <p class="text-center corMarrom">Essas são nossas categorias disponiveis para pedir e abusar!</p>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container text-center">
+        <div class="row d-flex justify-content-center align-items-center">
+          <div class="col-md-9">
+            <div class="form-group mb-4 mt-4">
+              <h1 class="display-5 fredoka">APOIE O VEGGIEATS</h1>
+              <p class="lead mt-3">
+                Seja um parceiro, colaborador, ou cliente fidelidade. Vamos
+                ajudar a causa das micros, pequenas e médias empresas que
+                produzem produtos focando na sustentabilidade, elaborando
+                refeições Veganas e Vegetarianas!
+              </p>
+              <a class="branco" routerLink="/contato">Entre em contato aqui</a>
             </div>
           </div>
         </div>
-        <div class="container d-flex align-items-center justify-content-center">
-          <div class="row d-flex justify-content-center">
-            <div class="col-md-2" *ngFor="let item of listaCategorias">
+      </div>
+    </div>
+    <!-- jumbotron fim-->
 
-              <div class="card-body justify-content-center">
-                <table class="table ">
-                  <thead>
-                    <tr>
-                      <th class="card-text text-center"><img class="card-img-top" src={{item.foto}} alt="Card image cap"></th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                      <p class="card-text text-center p-2">{{item.descricao}}</p>
-                  </tbody>
-                </table>
-                <div class="mb-3 mt-3 d-flex justify-content-center" *ngIf="auth.adm()">
-                  <a class="cat" [routerLink]="['/categoria-edit', item.id]" href="">Editar</a>
-                  <a class="cat ml-3" [routerLink]="['/categoria-delete', item.id]" href="">Apagar</a>
-                </div>
-              </div>
-
-
+    <div class="container mt-3 d-flex justify-content-center">
+      <div class="row">
+        <div class="col-md-12 mt-2 justify-content-center text-center">
+          <h1 class="text-center corroxo fredoka">CATEGORIAS</h1>
+          <div class="clicavel" *ngIf="auth.adm()">
+            <a
+              [routerLink]="['/categoria']"
+              class="text-center justify-content-center corroxo"
+              >+ Adicionar Categoria</a
+            >
+          </div>
+          <p class="text-center corMarrom">
+            Essas são nossas categorias disponiveis para pedir e abusar!
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container d-flex align-items-center justify-content-center">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-2" *ngFor="let item of listaCategorias">
+          <div class="card-body justify-content-center mr-3">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th class="card-text text-center">
+                    <img
+                      [routerLink]="['/restaurantes']"
+                      class="card-img-top"
+                      src="{{ item.foto }}"
+                      alt="Card image cap"
+                    />
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <p class="card-text text-center p-2">{{ item.descricao }}</p>
+              </tbody>
+            </table>
+            <div
+              class="mb-3 mt-3 d-flex justify-content-center"
+              *ngIf="auth.adm()"
+            >
+              <a class="cat" [routerLink]="['/categoria-edit', item.id]" href=""
+                >Editar</a
+              >
+              <a
+                class="cat ml-3"
+                [routerLink]="['/categoria-delete', item.id]"
+                href=""
+                >Apagar</a
+              >
             </div>
           </div>
+        </div>
+      </div>
 
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="apoiemodal"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="TituloModalCentralizado"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content text-center">
+            <div class="modal-header text-center">
+              <h5 class="modal-title text-center" id="TituloModalCentralizado">
+                APOIE
+              </h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Fechar"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body text-center justify-content-center">
+              <h3>
+                Apoie o projeto e ajude o planeta! Nos envie um email para:
+              </h3>
+              <h2>veggieatsprojeto@gmail.com</h2>
+              <h3>Estamos te aguardando 😄</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  <!-- Modal -->
-  <div class="modal fade" id="apoiemodal" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content text-center ">
-          <div class="modal-header text-center ">
-            <h5 class="modal-title text-center " id="TituloModalCentralizado">APOIE</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+    <!-- !MODAL PARA VENDER-->
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="vender"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="Titulovender"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="Titulovender">
+              Seja um Parceiro VeggiEats!
+            </h5>
+            <button
+              type="button"
+              data-dismiss="modal"
+              aria-label="Fechar"
+              class="bt"
+            >
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body text-center justify-content-center">
-            <h3>Apoie o projeto e ajude o planeta! Nos envie um email para:</h3>
-            <h2>veggieatsprojeto@gmail.com</h2>
-            <h3>Estamos te aguardando 😄</h3>
+          <div class="modal-body" data-dismiss="modal">
+            <p>
+              Se você produz algum produto <span>VEGANO</span> ou
+              <span>VEGETARINO</span>, você está no lugar certo!
+            </p>
+            <p>
+              Basta selecionar "Vendedor(a)" no campo de "Tipo de Usuário" em
+              nosso cadastro.
+            </p>
+            <p>
+              Acesse o link
+              <a routerLink="/login" class="verde ml-1 mr-1">aqui</a> e venha
+              vender conosco agora mesmo!
+            </p>
           </div>
         </div>
       </div>
     </div>
-        </div>
 
-      <!-- !MODAL PARA VENDER-->
-
-  <!-- Modal -->
-  <div class="modal fade" id="vender" tabindex="-1" role="dialog" aria-labelledby="Titulovender" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="Titulovender">Seja um Parceiro VeggiEats! </h5>
-          <button type="button" data-dismiss="modal" aria-label="Fechar" class="bt">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body" data-dismiss="modal">
-          <p> Se você produz algum produto <span>VEGANO</span> ou <span>VEGETARINO</span>, você está no lugar certo!</p>
-          <p> Basta selecionar "Vendedor(a)" no campo de "Tipo de Usuário" em nosso cadastro.</p>
-          <p> Acesse o link <a routerLink="/login" class="verde ml-1 mr-1">aqui</a> e venha vender conosco agora mesmo!</p>
+    <!-- ! MODAL PARA ENTREGAR  -->
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="entregar"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="Tituloentregar"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="Tituloentregar">Entregue Conosco!</h5>
+            <button
+              type="button"
+              data-dismiss="modal"
+              aria-label="Fechar"
+              class="bt"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>
+              Se você tem CNH em dia, deixe seu email aqui que entraremos em
+              contato o mais rápido possível.
+            </p>
+            <label for="titulo">E-mail:</label>
+            <input
+              name="titulo"
+              type="text"
+              class="form-control"
+              id="titulo"
+              placeholder="exemplo@exemplo.com "
+            />
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="claro"
+                (click)="enviar()"
+                data-dismiss="modal"
+              >
+                ENVIAR
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-
-  <!-- ! MODAL PARA ENTREGAR  -->
-  <!-- Modal -->
-  <div class="modal fade" id="entregar" tabindex="-1" role="dialog" aria-labelledby="Tituloentregar" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="Tituloentregar">Entregue Conosco!</h5>
-          <button type="button" data-dismiss="modal" aria-label="Fechar" class="bt">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <p> Se você tem CNH em dia, deixe seu email aqui que entraremos em contato o mais rápido possível.</p>
-          <label for="titulo">E-mail:</label>
-              <input name="titulo" type="text" class="form-control" id="titulo" placeholder="exemplo@exemplo.com ">
-              <div class="modal-footer">
-                <button type="button" class="claro" (click)="enviar()" data-dismiss="modal">ENVIAR</button>
-              </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
