--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -26,10 +26,10 @@
                   <div class="service-widget footer-widget">
                       <div class="footer-title">SERVIÇOS</div>
                       <ul class="texto">
-                          <li><a href="#">Vendas</a></li>
-                          <li><a href="#">Entregas</a></li>
-                          <li><a href="#">Parceiros</a></li>
-                          <li><a href="#">Fidelidade</a></li>
+                          <li><a href="#" routerLink="/sobre">Institucional</a></li>
+                          <li><a href="#" routerLink="contato">Contato</a></li>
+                          <!-- <li><a href="#">Parceiros</a></li>
+                          <li><a href="#">Fidelidade</a></li> -->
                       </ul>
                   </div>
               </div>
@@ -37,11 +37,10 @@
               <!-- !CONTATO -->
               <div class="col-lg-3 col-md-6 col-sm-12 footer-widget">
                   <div class="contact-widget footer-widget">
-                      <div class="footer-title">CONTATO</div>
+                      <div class="footer-title">Trabalhe Conosco</div>
                       <div class="texto">
-                          <p>Lorem Ipsum, simply dummy text, printing, Chandigarh</p>
-                          <p> + 00 (00) 00000-00000</p>
-                          <p>info@example.com</p>
+                          <p>Quer se juntar a nossa equipe? Entre em contato!</p>
+                          <p>veggieatsprojeto@gmail.com</p>
                       </div>
                   </div>
               </div>
