--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -11,23 +11,18 @@
       <li class="nav-item active">
         <img src="https://i.imgur.com/fxDLdT1.png"  alt="Logo Veggieats"  width="200">
           </li>
+          <!-- LISTA DE ITENS -->
+        <ul class="navbar-nav d-flex align-items-center ml-5">
+          <li class="nav-item active p-1 fredoka">
+          <a class="nav-verde" href="#">INÍCIO<span class="sr-only">(página atual)</span></a>
+          </li>
+          <li class="nav-item p-1 fredoka">
+            <a class="nav-verde" href="#" routerLink='/restaurantes'>RESTAURANTES</a>
+          </li>
+        </ul>
     </ul>
 
-<!-- LISTA DE ITENS -->
-<ul class="navbar-nav d-flex align-items-center ml-auto">
-  <li class="nav-item active p-1 fredoka">
-  <a class="nav-verde" href="#">INÍCIO<span class="sr-only">(página atual)</span></a>
-    </li>
-    <li class="nav-item p-1 fredoka">
-      <a class="nav-verde" href="#" routerLink='/restaurantes'>RESTAURANTES</a>
-    </li>
-    <li class="nav-item p-1 fredoka">
-      <a class="nav-verde" href="#" routerLink="/sobre">SOBRE NÓS</a>
-    </li>
-    <li class="nav-item p-1 fredoka">
-      <a class="nav-verde" href="#" routerLink="contato">CONTATO</a>
-    </li>
-    </ul>
+
 
 <!-- USUÁRIO ENTRAR / INFO DO USUÁRIO -->
       <!-- CASO O USUÁRIO NÃO ESTEJA LOGADO -->
@@ -39,8 +34,8 @@
                 </div>
                 <div class=" mr-2">
                 </div>
-                <div class="p-0">
-                  <button class="button-create btn-block mr-5" routerLink="/login">Criar conta</button>
+                <div class="p-0 mt-3 ml-1">
+                  <p class=" text-create btn-block mr-5" routerLink="/login">Criar conta</p>
                 </div>
               </div>
           </div>
