--- a/src/app/restaurantes/restaurantes.component.html
+++ b/src/app/restaurantes/restaurantes.component.html
@@ -167,7 +167,7 @@
             src="{{ usuario.foto }}"
             class="mt-3"
             width="70px"
-            alt="Imagem do produto"
+            alt="Imagem do restaurante"
           />
           <div class="card-body">
             <img
