--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -3,43 +3,27 @@
 
     <div>
       <h1 class="container fredoka text-center mb-5">Entre em contato</h1>
-      <p class="mb-50 text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-        has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-        and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-        electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-        Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-        PageMaker including versions of Lorem Ipsum.</p>
+      <p class="mb-50 text-center"></p>
 
         <hr class="mb-50" size="10" width="50%"  noshade>
 
       <div class="row d-flex justify-content-center">
-        <div class="col-sm-4">
+        <div class="col-sm-6">
           <div class="">
             <div class="card-body">
               <h5 class="card-title">CONTATO</h5>
               <p class="card-text ">Tel: (11) 3456-7890</p>
-              <p>Email: info@meusite.com</p>
+              <p>Email: veggieatsprojeto@gmail.com</p>
 
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6">
           <div class="">
             <div class="card-body ">
               <h5 class="card-title">ENDEREÇO</h5>
               <p class="card-text">Av. Bernardino de Campos 98</p>
               <p> São Paulo, SP 12345-678</p>
-
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="">
-            <div class="card-body ml-5">
-              <h5 class="card-title">HORÁRIO</h5>
-              <p class="card-text">Seg - Sex: 7:00 - 22:00</p>
-              <p>​​Sábado: 8:00 - 22:00</p>
-              <p>Domingo: 8:00 - 23:00</p>
 
             </div>
           </div>
