--- a/src/app/edit/usuario-edit/usuario-edit.component.html
+++ b/src/app/edit/usuario-edit/usuario-edit.component.html
@@ -77,7 +77,7 @@
                   </div>
 
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button (click)="atualizar()" type="button" class="btn btn-primary btn-lg">Atualizar!</button>
+                    <button (click)="atualizar()" type="button" class="btn btn-primary btn-lg button-atualizar">Atualizar!</button>
                   </div>
 
                 </form>
