tirando o lorem do rodape

--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -6,7 +6,7 @@
                   <div class="logo-widget footer-widget">
                       <figure class="logo-box"><a href="#"><img src="https://i.imgur.com/h82uXHM.png" alt=""  width="150px"></a></figure>
                       <div class="texto text-justify">
-                          <p>Lorem ipsum dolor amet consectetur adi pisicing elit sed eiusm tempor incididunt ut labore dolore magna aliqua enim ad minim veniam quis.nostrud exercita.laboris nisi ut aliquip ea commodo conse quatuis aute irure.</p>
+                          <p>O Veggieats foi pensando para gerar empregos justos e de uma forma sustentável, nada do que juntar o útil ao agradável.</p>
                       </div>
 
                       <!-- ! REDES SOCIAIS -->
